--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.3.2",
     "react-load-script": "0.0.6",
+    "react-overdrive": "0.0.10",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
